# lantern-image-loader

./: CMakeLists.txt  README.md  main.cpp  main.cu  pch.h
headers/: DataProcessing.h  File.h  Loader.h  Vector.h
src/: main.cpp
